[package]
name = "ga_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.5"
regex = "1.5.6"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
serde_json = "1.0.82"
